--- a/ontoCAT/lib/owlapi-3.2.2/releasenotes.txt
+++ b/ontoCAT/lib/owlapi-3.2.2/releasenotes.txt
@@ -1,4 +1,52 @@
 ----------------------------------------------------------------------
+Release 3.2.2
+----------------------------------------------------------------------
+
+This version of the API includes various bug fixe:
+
+- In RDF based serialisations, type triples for entities that don't have "defining axioms" don't get added even if the
+renderer is instructed to type undeclared entities (related to 3184131). Fixed.
+- The RDF parser would not recognise XSD datatypes that aren't OWL 2 Datatypes even in lax parsing mode (related to 3184131). Fixed.
+- OWLOntologyManager.createOntology() methods don't set the document IRI of the created ontologies as adverstised if
+there aren't any ontology IRI mappers installed (3184878). Fixed.
+
+
+----------------------------------------------------------------------
+Release 3.2.1
+----------------------------------------------------------------------
+
+This version of the API includes various bug fixes
+
+- Issues with -INF as serialisation for -infinity for floating point literals. Fixed.
+- Null pointer exception can be thrown by OBO parser (3162800). Fixed.
+- OWLOntologyManager.loadOntology() can throw unchecked exceptions (IllegalArgumentException) (3158293). Fixed.
+- OWLOntologyAlreadyExistsException get wrapped as as a parse exception by the OBO parser. (3165446). Fixed.
+- OWLRDFConsumer (OWL RDFParser) used owl:Datatype instead of rdfs:Datatype. Fixed.
+- OWLOntology.getDisjointUnionAxioms() does not work as expected. (3165000). Fixed.
+- Anonymous ontologies do not get typed as owl:Ontology during saving in RDF. (3158177). Fixed.
+- OWLOntology hashCode is not implemented properly. (3165583). Fixed.
+
+----------------------------------------------------------------------
+Release 3.2.0
+----------------------------------------------------------------------
+
+This version of the API includes various bug fixes and performance enhancements since version 3.1.0
+
+Main Bug Fixes:
+
+- Various round tripping problems for various syntaxes (3155509, 3154524, 3149789, 3141366, 3140693, 3137303, 3121903)
+- Plain Literals are rendered incorrectly. Fixed.
+- Cyclic imports cause an OntologyAlreadyExistsException to be thrown. Fixed.
+- OWLAxiom.getAnnotatedAxiom() does not merge annotations.  Fixed.
+- OWLObject.getSignature() returns an unmodifiable collection. Fixed.
+- Various problems with character encodings (3068076, 3077637, 3096546, 3140693). Fixed.
+- IRI.create resulted in a memory leak.  Fixed.
+- Imports by location does not work. Fixed.
+- Various problems with anonymous individuals (2998616, 2943908, 3073742). Fixed.
+- Dublin Core Vocabulary is built into OWL API parsers.  Fixed.
+- Files are left open on parse errors.  Fixed.
+
+----------------------------------------------------------------------
 Release 3.1.0
 ----------------------------------------------------------------------
 
